# RailwayAccidentAnalyzer

./: Indian_Railway_Accidents_Analysis_IEEE_Paper.md  README.md  app.py  pyproject.toml
.streamlit/: config.toml
attached_assets/: Pasted--Indian-Railway-Accidents-Analysis-Prediction-Goal-Build-a-data-mining-pipeline-to-analyze-ra-1745941788961.txt  indian_railway_accidents.csv
data/: indian_railway_accidents.csv
figures/: create_figures.py  create_figures_3_and_4.py  figure1_evolution_of_methods.py  figure2_geographical_distribution.py
models/: anomaly_detection.py  association_mining.py  severity_model.py
utils/: data_preprocessing.py  geocoding.py  modeling.py  visualization.py
