[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "geopy>=2.4.1",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "mlxtend>=0.23.4",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "streamlit>=1.44.1",
    "xgboost>=3.0.0",
]
